# week-4-exercises

2DGraphics/: CMakeLists.txt
2DGraphics/include/: Color.h  Point.h  Scene.h  Shape.h
2DGraphics/src/: Scene.cpp  main.cpp
2DGraphics/tests/: test_shapes.cpp
Animals/include/: animalClasses.h
Animals/src/: animalsSpeak.cpp
Templates/include/: Fraction.h  MatrixTemplate.h
Templates/source/: CMakeLists.txt  Fraction.cpp  Polynomial.cpp  Templates.cpp
